# backend/openapi.yaml
@@ -255,6 +255,45 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/nesgo.webapi.v1.LoginResponse'
+    /api/v1/member:
+        delete:
+            tags:
+                - WebApi
+            operationId: WebApi_DeleteMember
+            parameters:
+                - name: roomId
+                  in: query
+                  schema:
+                    type: string
+                - name: userId
+                  in: query
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/nesgo.webapi.v1.DeleteMemberResponse'
+    /api/v1/member/role:
+        put:
+            tags:
+                - WebApi
+            operationId: WebApi_UpdateMemberRole
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/nesgo.webapi.v1.UpdateMemberRoleRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/nesgo.webapi.v1.UpdateMemberRoleResponse'
     /api/v1/member/{roomId}:
         get:
             tags:
@@ -663,6 +702,9 @@ components:
                 memberLimit:
                     type: integer
                     format: int32
+        nesgo.webapi.v1.DeleteMemberResponse:
+            type: object
+            properties: {}
         nesgo.webapi.v1.DeleteRoomResponse:
             type: object
             properties: {}
@@ -874,6 +916,19 @@ components:
                     type: integer
                     format: int32
         nesgo.webapi.v1.SetControllerResponse:
+            type: object
+            properties: {}
+        nesgo.webapi.v1.UpdateMemberRoleRequest:
+            type: object
+            properties:
+                roomId:
+                    type: string
+                userId:
+                    type: string
+                role:
+                    type: integer
+                    format: enum
+        nesgo.webapi.v1.UpdateMemberRoleResponse:
             type: object
             properties: {}
         nesgo.webapi.v1.UpdateRoomRequest:
